tests/snapshots/aws-ecs-fargate-web/security.tf
# Generated by infra-x v<version>
# Stack: aws-ecs-fargate-web
# Blueprint: aws-ecs-fargate-web
# Description: Container web app on ECS Fargate behind an Application Load Balancer in a 2-AZ VPC. Minimal but production-shaped.
# DO NOT EDIT BY HAND if you plan to regenerate. Use `infra-x regen`.

resource "aws_security_group" "alb_sg" {
  name   = "${var.app_name}-alb-sg"
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "task_sg" {
  name   = "${var.app_name}-task-sg"
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port       = var.container_port
    to_port         = var.container_port
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
